--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>FrontendLinkSkills</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-  
+
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/yaltimimie/trade-script-logo%400.5x.png">
 </head>
 <body>
   <app-root></app-root>
