--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FrontendLinkSkills</title>
+  <title>Trade Script</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 
   <base href="/">
